# Lab-15-03-2026

./: .pre-commit-config.yaml  Dockerfile  LICENSE  NOWA_NAZWA.md  app.py  inference.py  main.py  pyproject.toml  pytest.ini  secrets.yaml  setings.py  settings.py  sops_bin  training.py
config/: .env.dev  .env.test
sentiment-api/: app.py  inference.py  pyproject.toml
sentiment-api/api/models/: sentiment.py
sentiment-api/tests/: test_app.py  test_inference.py
sentiment_api/: app.py  docker-compose.yaml  inference.py  pyproject.toml
sentiment_api/tests/: test_app.py  test_inference.py
tests/: test_settings.py
