[project]
name = "sentiment-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clean-text>=0.7.1",
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.11",
]
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true